@@ -1,18 +1,19 @@
 package util;
 
-import sun.misc.BASE64Decoder;
+import wallet.Wallet;
 
 import java.security.KeyFactory;
 import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 
 public class KeyUtil {
 
     public static PublicKey getPublicKey(String key) throws Exception {
         byte[] keyBytes;
-        keyBytes = (new BASE64Decoder()).decodeBuffer(key);
+        keyBytes = Base64.getDecoder().decode(key);
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("ECDSA", "BC");
         PublicKey publicKey = keyFactory.generatePublic(keySpec);
@@ -22,7 +23,7 @@ public class KeyUtil {
 
     public static PrivateKey getPrivateKey(String key) throws Exception {
         byte[] keyBytes;
-        keyBytes = (new BASE64Decoder()).decodeBuffer(key);
+        keyBytes = Base64.getDecoder().decode(key);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("ECDSA", "BC");
         PrivateKey privateKey = keyFactory.generatePrivate(keySpec);
@@ -44,6 +45,16 @@ public class KeyUtil {
             return true;
         } catch (Exception e) {
             return false;
+        }
+    }
+
+    public static void main(String[] args) {
+        Wallet w = new Wallet();
+        String pubK = w.getPublicKey();
+        try {
+            getPublicKey(pubK);
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 }
